更改相关记录

--- a/tx-tm/src/main/resources/application.properties
+++ b/tx-tm/src/main/resources/application.properties
@@ -26,3 +26,8 @@ tx-lcn.manager.ex-url=/provider/email-to/m17710912737@163.com
 #开启debug级别日志
 logging.level.com.codingapi.txlcn=DEBUG
 
+
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
+spring.redis.database=0
+
