--- a/tx-tm/pom.xml
+++ b/tx-tm/pom.xml
@@ -17,7 +17,7 @@
 
         <!--<dependency>-->
             <!--<groupId>com.codingapi.txlcn</groupId>-->
-            <!--<artifactId>txlcn-logger</artifactId>-->
+            <!--<artifactId>txlcn-com.xuliang.logger</artifactId>-->
         <!--</dependency>-->
 
         <dependency>
@@ -60,6 +60,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.xuliang.txlcn</groupId>
+            <artifactId>tx-logger</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
