--- a/tx-tm/src/main/resources/application.properties
+++ b/tx-tm/src/main/resources/application.properties
@@ -9,15 +9,17 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 
-tx-lcn.logger.enabled=true
-tx-lcn.logger.driver-class-name=com.mysql.jdbc.Driver
-tx-lcn.logger.jdbc-url=jdbc:mysql://127.0.0.1:3306/tx_logger?characterEncoding=UTF-8
-tx-lcn.logger.username=root
-tx-lcn.logger.password=root
+tx-lcn.com.xuliang.logger.enabled=true
+tx-lcn.com.xuliang.logger.driver-class-name=com.mysql.jdbc.Driver
+tx-lcn.com.xuliang.logger.jdbc-url=jdbc:mysql://127.0.0.1:3306/tx_logger?characterEncoding=UTF-8
+tx-lcn.com.xuliang.logger.username=root
+tx-lcn.com.xuliang.logger.password=root
 
 
 # 异常回调开关。开启时请制定ex-url
 tx-lcn.manager.ex-url-enabled=true
+
+tx-lcn.logger.enabled=true
 
 # 事务异常通知（任何http协议地址。未指定协议时，为TM提供内置功能接口）。默认是邮件通知
 tx-lcn.manager.ex-url=/provider/email-to/m17710912737@163.com
